devops/kubernetes/account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  namespace: cib-bank

spec:
  replicas: 2

  selector:
    matchLabels:
      app: account-service

  template:
    metadata:
      labels:
        app: account-service

    spec:
      containers:
      - name: account-service
        image: cib/account-service:latest

        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: cib-bank

spec:
  selector:
    app: account-service

  ports:
  - port: 8082
    targetPort: 8082
