devops/kubernetes/admin-service.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: admin-service
  namespace: cib-bank

spec:
  replicas: 2

  selector:
    matchLabels:
      app: admin-service

  template:
    metadata:
      labels:
        app: admin-service

    spec:
      containers:
      - name: admin-service
        image: cib/admin-service:latest

        ports:
        - containerPort: 8090

---
apiVersion: v1
kind: Service

metadata:
  name: admin-service
  namespace: cib-bank

spec:
  selector:
    app: admin-service

  ports:
  - port: 8090
    targetPort: 8090

  type: ClusterIP
