devops/kubernetes/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-gateway
  namespace: cib-bank

spec:
  replicas: 2

  selector:
    matchLabels:
      app: api-gateway

  template:
    metadata:
      labels:
        app: api-gateway

    spec:
      containers:
      - name: api-gateway
        image: cib/api-gateway:latest

        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service

metadata:
  name: api-gateway
  namespace: cib-bank

spec:
  selector:
    app: api-gateway

  ports:
  - port: 8080
    targetPort: 8080
