devops/kubernetes/audit-service.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: audit-service
  namespace: cib-bank

spec:
  replicas: 2

  selector:
    matchLabels:
      app: audit-service

  template:
    metadata:
      labels:
        app: audit-service

    spec:
      containers:
      - name: audit-service
        image: cib/audit-service:latest

        ports:
        - containerPort: 8095

---
apiVersion: v1
kind: Service

metadata:
  name: audit-service
  namespace: cib-bank

spec:
  selector:
    app: audit-service

  ports:
  - port: 8095
    targetPort: 8095

  type: ClusterIP
