devops/kubernetes/customer-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
  namespace: cib-bank

spec:
  replicas: 2

  selector:
    matchLabels:
      app: customer-service

  template:
    metadata:
      labels:
        app: customer-service

    spec:
      containers:
      - name: customer-service
        image: cib/customer-service:latest

        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: cib-bank

spec:
  selector:
    app: customer-service

  ports:
  - port: 8081
    targetPort: 8081
