devops/kubernetes/dashboard-service.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: dashboard-service
  namespace: cib-bank

spec:
  replicas: 2

  selector:
    matchLabels:
      app: dashboard-service

  template:
    metadata:
      labels:
        app: dashboard-service

    spec:
      containers:
      - name: dashboard-service
        image: cib/dashboard-service:latest

        ports:
        - containerPort: 8092

---
apiVersion: v1
kind: Service

metadata:
  name: dashboard-service
  namespace: cib-bank

spec:
  selector:
    app: dashboard-service

  ports:
  - port: 8092
    targetPort: 8092

  type: ClusterIP
