devops/kubernetes/fraud-detection-service.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: fraud-detection-service
  namespace: cib-bank

spec:
  replicas: 2

  selector:
    matchLabels:
      app: fraud-detection-service

  template:
    metadata:
      labels:
        app: fraud-detection-service

    spec:
      containers:
      - name: fraud-detection-service
        image: cib/fraud-detection-service:latest

        ports:
        - containerPort: 8087

---
apiVersion: v1
kind: Service

metadata:
  name: fraud-detection-service
  namespace: cib-bank

spec:
  selector:
    app: fraud-detection-service

  ports:
  - port: 8087
    targetPort: 8087

  type: ClusterIP
