devops/kubernetes/payment-service.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: payment-service
  namespace: cib-bank

spec:
  replicas: 2

  selector:
    matchLabels:
      app: payment-service

  template:
    metadata:
      labels:
        app: payment-service

    spec:
      containers:
      - name: payment-service
        image: cib/payment-service:latest

        ports:
        - containerPort: 8083

---
apiVersion: v1
kind: Service

metadata:
  name: payment-service
  namespace: cib-bank

spec:
  selector:
    app: payment-service

  ports:
  - port: 8083
    targetPort: 8083
