devops/kubernetes/report-service.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: report-service
  namespace: cib-bank

spec:
  replicas: 2

  selector:
    matchLabels:
      app: report-service

  template:
    metadata:
      labels:
        app: report-service

    spec:
      containers:
      - name: report-service
        image: cib/report-service:latest

        ports:
        - containerPort: 8091

---
apiVersion: v1
kind: Service

metadata:
  name: report-service
  namespace: cib-bank

spec:
  selector:
    app: report-service

  ports:
  - port: 8091
    targetPort: 8091

  type: ClusterIP
