devops/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cib-ingress
  namespace: cib-bank

  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"

spec:
  ingressClassName: nginx

  rules:
  - host: cib.local

    http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: api-gateway

            port:
              number: 8080

      - path: /api/customers
        pathType: Prefix

        backend:
          service:
            name: customer-service

            port:
              number: 8081

      - path: /api/accounts
        pathType: Prefix

        backend:
          service:
            name: account-service

            port:
              number: 8082

      - path: /api/payments
        pathType: Prefix

        backend:
          service:
            name: payment-service

            port:
              number: 8083

      - path: /api/transactions
        pathType: Prefix

        backend:
          service:
            name: transaction-service

            port:
              number: 8084

      - path: /api/beneficiaries
        pathType: Prefix

        backend:
          service:
            name: beneficiary-service

            port:
              number: 8086

      - path: /api/ai
        pathType: Prefix

        backend:
          service:
            name: ai-service

            port:
              number: 8089

      - path: /api/admin
        pathType: Prefix

        backend:
          service:
            name: admin-service

            port:
              number: 8090

      - path: /api/reports
        pathType: Prefix

        backend:
          service:
            name: report-service

            port:
              number: 8091

      - path: /api/dashboard
        pathType: Prefix

        backend:
          service:
            name: dashboard-service

            port:
              number: 8092

      - path: /api/audit
        pathType: Prefix

        backend:
          service:
            name: audit-service

            port:
              number: 8095

      - path: /api/scheduled-payments
        pathType: Prefix

        backend:
          service:
            name: scheduled-payment-service

            port:
              number: 8096
